# Linebot_Inspiration_Assistant

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_with_ngrok.py
docs/: documentation_update_summary.md  implementation_plan.md  prompt_template.md  task.md  troubleshooting.md  walkthrough.md
